--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Build a Wikipedia Viewer</title>
+	<title> Twitchtv JSON API </title>
 </head>
 <body>
 	<div id="root"></div>
