--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,33 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title> Twitchtv JSON API </title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-	<div id="root"></div>
-    <script type="text/javascript" src="/public/bundle.js"></script>
+	
+  <div><span class="title"> Reactjs Calculator </span>
+            <div class="container">
+              <div class="color-container">
+                <div class="inline" id="red"></div>
+                <div class="inline" id="green"></div>
+                <div class="inline" id="yellow"> </div>
+                <div class="inline" id="blue"> </div>
+              </div>
+            <span class="power"> power  </span>
+            <span class="start"> start  </span>
+            <span class="strict"> strict </span>
+            <span class="count"> to edit level : 3 </span>
+            <div> 
+              <div style="margin-top: 40px;">
+                  <span style="float: left;"> Deployed Heroku App: <a href="https://gpbaculio-twitchtv-api.herokuapp.com/" target="_blank" > link </a> </span>
+                  <span style="float: right;"> Github Repo: <a href="https://github.com/iamglenbacs/gpbaculio-twitchtv-api" target="_blank" > link </a> </span>
+              </div>
+            </div>  
+        </div>
+        <span class="footer"> Developed by Glendon Philipp Baculio </span>
+    </div>
+         <script type="text/javascript" src="/public/bundle.js"></script>
 </body>
 </html>
 
