all set and done. ready to deploy and update links

--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Twitchtv JSON API </title>
+	<title> JavaScript + jQuery Simon Game </title>
 </head>
 <body>
 	
-  <div><span class="title"> Reactjs Calculator </span>
+  <div><span class="title"> JavaScript + jQuery Simon Game </span>
             <div class="container">
               <div class="color-container">
                 <div class="inline" id="red"></div>
                 <div class="inline" id="green"></div>
                 <div class="inline" id="yellow"> </div>
                 <div class="inline" id="blue"> </div>
+                  <div class="power inline"> power  </div>
+                  <div class="start inline"> start  </div>
+                  <div class="strict inline"> strict </div>
+                  <div class="replay inline"> replay </div>
+                  <div class="count inline"> <p class="level"></p> </br> <p class="level-text">level</p></div>
               </div>
-            <span class="power"> power  </span>
-            <span class="start"> start  </span>
-            <span class="strict"> strict </span>
-            <span class="count"> to edit level : 3 </span>
+            
+            
             <div> 
               <div style="margin-top: 40px;">
                   <span style="float: left;"> Deployed Heroku App: <a href="https://gpbaculio-twitchtv-api.herokuapp.com/" target="_blank" > link </a> </span>
