--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
             
             <div> 
               <div style="margin-top: 40px;">
-                  <span style="float: left;"> Deployed Heroku App: <a href="https://gpbaculio-twitchtv-api.herokuapp.com/" target="_blank" > link </a> </span>
-                  <span style="float: right;"> Github Repo: <a href="https://github.com/iamglenbacs/gpbaculio-twitchtv-api" target="_blank" > link </a> </span>
+                  <span style="float: left;"> Deployed Heroku App: <a href="https://gpbaculio-simon-game.herokuapp.com/" target="_blank" > link </a> </span>
+                  <span style="float: right;"> Github Repo: <a href="https://github.com/iamglenbacs/gpbaculio-simongame" target="_blank" > link </a> </span>
               </div>
             </div>  
         </div>
